[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
ndarray = "0.15.6"
nom = "7.1.1"
num-traits = "0.2.15"
rayon = "1.6.0"

[dev-dependencies]
rstest = "0.16.0"
